--- a/package.json
+++ b/package.json
@@ -1,18 +1,31 @@
 {
-  "name": "use-jquery",
-  "version": "0.0.0",
+  "name": "@hrdtbs/use-jquery",
+  "version": "0.0.1",
   "license": "MIT",
   "main": "index.cjs.js",
   "jsnext:main": "index.esm.js",
   "module": "index.esm.js",
   "types": "index.d.ts",
   "peerDependencies": {
-    "react": "^16.9.0",
-    "jquery": "^3.4.1"
+    "jquery": "^3.4.1",
+    "react": "^16.9.0"
   },
   "devDependencies": {
-    "@types/react": "^16.9.2",
     "@types/jquery": "^3.3.31",
+    "@types/react": "^16.9.2",
     "typescript": "3.6.2"
-  }
+  },
+  "description": "React Hooks of jQuery",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hrdtbs/useJQuery.git"
+  },
+  "author": "hrdtbs",
+  "bugs": {
+    "url": "https://github.com/hrdtbs/useJQuery/issues"
+  },
+  "homepage": "https://github.com/hrdtbs/useJQuery#readme"
 }
